@@ -34,6 +34,7 @@ module Braintree
     attr_reader :number_of_billing_cycles, :billing_day_of_month
     attr_reader :add_ons, :discounts
     attr_reader :descriptor
+    attr_reader :description
     attr_reader :current_billing_cycle
     attr_reader :updated_at, :created_at
     attr_reader :status_history
