@@ -67,7 +67,11 @@ module Braintree
         :trial_duration,
         :trial_duration_unit,
         :trial_period,
-        {:options => [:do_not_inherit_add_ons_or_discounts, :start_immediately]},
+        {:options => [
+          :do_not_inherit_add_ons_or_discounts,
+          :start_immediately,
+          {:paypal => [:description]},
+        ]},
         {:descriptor => [:name, :phone, :url]}
       ] + _add_on_discount_signature
     end
@@ -85,7 +89,8 @@ module Braintree
         {:options => [
           :prorate_charges,
           :replace_all_add_ons_and_discounts,
-          :revert_subscription_on_proration_failure
+          :revert_subscription_on_proration_failure,
+          {:paypal => [:description]},
         ]},
         {:descriptor => [:name, :phone, :url]}
       ] + _add_on_discount_signature
